external-crates/move/crates/move-compiler/tests/development/typing/signed_int_negation_unsigned_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
warning[W04039]: unable to determine principal type for literal
  ┌─ tests/development/typing/signed_int_negation_unsigned_error.move:5:19
  │
5 │         let _b = -a;
  │                   ^ Could not determine a concrete type for this signed numeric literal, so defaulting to 'i64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>i64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
  ┌─ tests/development/typing/signed_int_negation_unsigned_error.move:5:19
  │
4 │         let a: u64 = 5;
  │                --- Given: 'u64'
5 │         let _b = -a;
  │                   ^
  │                   │
  │                   Invalid argument to '-'
  │                   Expected: '_'
